@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Fix fatal errors if DAV support is disabled (Bug #12481).
 * [mjr] Fix deleting multiple contacts via the API (Bug #12554).
 * [mjr] Fix issue generating contact hashes from EAS contacts that could prevent duplicate contact detection from working when certain properties have empty values (Bug #12506).
  </notes>
@@ -1682,6 +1683,7 @@
    <date>2013-07-16</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Fix fatal errors if DAV support is disabled (Bug #12481).
 * [mjr] Fix deleting multiple contacts via the API (Bug #12554).
 * [mjr] Fix issue generating contact hashes from EAS contacts that could prevent duplicate contact detection from working when certain properties have empty values (Bug #12506).
    </notes>
